# MedSAM-Laptop

./: .gitignore  README.md  all_encoder_teacher_inference.py  doe.py  pyproject.toml  test_unicity.py
scripts/: count.py  create_mapper.py  npz2npy.py  teacher_inference.py  train_one_gpu.py
scripts/utils/: async.py  checks.py  my_async.py  name_mapper.py
src/medsamlaptop/: constants.py
src/medsamlaptop/data/: __init__.py  npy.py
src/medsamlaptop/data/factories/: __init__.py
src/medsamlaptop/data/products/: __init__.py  interface.py
src/medsamlaptop/dataloaders/: __init__.py  interface.py  sam.py
src/medsamlaptop/datasets/: __init__.py
src/medsamlaptop/datasets/factories/: __init__.py  distillation_res1024.py  distillation_res256.py  distillation_stage2_res1024.py  interface.py  npy_res1024.py  npy_res256.py
src/medsamlaptop/datasets/products/: __init__.py  distillation.py  npy.py  (+3 more)
src/medsamlaptop/facade/: __init__.py  facade.py  meta_factory.py
src/medsamlaptop/losses/: __init__.py  sam.py
src/medsamlaptop/models/: __init__.py  rep_vit.py
src/medsamlaptop/optimizers/: __init__.py  interface.py  sam.py
src/medsamlaptop/plot/: __init__.py  images.py  losses.py
src/medsamlaptop/schedulers/: __init__.py  interface.py  sam.py
src/medsamlaptop/scripts/: teacher_inference.py  train_one_gpu.py
src/medsamlaptop/trainers/: __init__.py  interface.py  medsam.py  trainer.py
src/medsamlaptop/utils/: checkpoint.py
src/medsamprovided/: DataReadMe.md  npz2npy.py
src/medsamtools/: __init__.py  user.py
tests/: datasets.py  model.py  npy_dataset.py
(+35 files in other folders)
